[gd_scene load_steps=2 format=3 uid="uid://gxyvh5001c0e"]

[ext_resource type="Script" path="res://UI/Control.gd" id="1_ryypx"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ryypx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 645.0
color = Color(0.211765, 0.0862745, 0.2, 1)

[node name="Swordsman" type="Button" parent="."]
layout_mode = 0
offset_left = 391.0
offset_top = 317.0
offset_right = 741.0
offset_bottom = 376.0
text = "Swordsman"

[node name="Archer" type="Button" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 402.0
offset_right = 743.0
offset_bottom = 461.0
text = "Archer
"

[node name="Wizard" type="Button" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 487.0
offset_right = 744.0
offset_bottom = 546.0
text = "Wizard
"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 209.0
offset_right = 467.0
offset_bottom = 235.0
scale = Vector2(3, 3)
text = "Player 2 Choose Character
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="Swordsman" to="." method="_on_swordsman_button_down"]
[connection signal="button_down" from="Archer" to="." method="_on_archer_button_down"]
[connection signal="button_down" from="Wizard" to="." method="_on_archer_button_down"]
[connection signal="button_down" from="Wizard" to="." method="_on_wizard_button_down"]
